# stock-ai-research

./: .gitignore  README.md  app.py  pyproject.toml
configs/: execution_alerts.json  performance_gate.json  sample_watchlist.json
data/: sample_history_a_stock.csv  sample_history_hk_stock.csv  sample_history_qdii.csv  sample_history_us_stock.csv
docs/: 交易说明书_v4.0.md  使用说明书_v4.0.md  全品种投研平台_优化版开发手册_v3.0.doc  全品种投研平台_优化版开发手册_v3.0.md  开发手册_v4.0.md
scripts/: generate_sample_data.py
src/stock_ai_research/: __init__.py  backtest.py  errors.py  execution.py  execution_alerts.py  execution_report.py  feishu_card.py  live_gate.py  llm_client.py  main.py  models.py  monitoring.py  news_analyzer.py  news_fetcher.py  notifier.py  orchestrator.py  report.py  risk.py  router.py  rules.py  trade_service.py  validation.py
tests/: conftest.py  test_backtest.py  test_execution.py  test_execution_alerts.py  test_execution_report.py  test_live_gate.py  test_llm_client.py  test_monitoring.py  test_news_analyzer.py  test_news_fetcher.py  test_notifier.py  test_report.py  test_risk.py  test_router.py  test_rules.py  test_trade_service.py  test_validation.py
